# mind-fin-pro-neural

./: .gitattributes  .gitignore  audit-feed.ps1  index.html  inspect_db_sa.py  package.json  reset_db_hard.py
.roadmap/: S7_README.md
Nova pasta/mind-fin-pro-src/: package-lock.json  tailwind.config.js
Tests/: test_smoke.py
backend/: $null  .dockerignore  .env  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.txt  README_BACKEND.md  Select-Object -First 1.txt  alembic.ini  app.py  check_schema.py  database.py  debug_db.py  docker-compose.yml  fix_alembic.py  fix_users_table.py  fly.toml  inspect_db.py  inspect_db_sa.py  inspect_sa.py  killmind.ps1  main.py  mind-dev.ps1  mind.db  mindfin.db  railway.json  requirements.txt  reset_db.py  reset_db_hard.py  reset_now.py  run_sprint6.ps1  runmind.ps1  temp_check_bcrypt.py  temp_count_users.py  temp_dump_users.py  temp_script.py  temp_seed_admin.py  testmind.ps1
backend/alembic/: env.py
backend/app/: database.py  main.py  seed_sqlite.py  temp_app.py
backend/migrations/: 0001_init.sql
backend/mind-fin-pro/: .gitignore
backend/mind-fin-pro/backend/: app.py  app.py.bak  kill.ps1  killmind.cmd  killmind.ps1  mind-dev.ps1  mind.ps1  pyproject.toml  runmind.ps1  serve.ps1  test.ps1  testmind.cmd  testmind.ps1
backend/mind-fin-pro/backend/tests/: load_test.js
backend/reports/: Sprint_0_Backend_Status.md  Sprint_4_Backend_Status.md
backend/scripts/: killmind.ps1  onemind.ps1  (+5 more)
frontend/: Dockerfile.txt
ops/: audit.s7.json  backup_s7.ps1  security.s7.json  telemetry.s7.json
src/: App.jsx  index.css
(+45 files in other folders)
