[project]
name = "mind-fin-pro-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi[all]",
  "uvicorn[standard]",
  "pydantic>=2",
  "sqlalchemy>=2",
  "asyncpg",
  "redis>=5",
  "cryptography",
  "apscheduler",
  "prometheus-client",
  "opentelemetry-sdk",
  "opentelemetry-instrumentation-fastapi",
  'opentelemetry-exporter-otlp',
  "python-multipart"
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000